--- a/Theme_Group_4/Clear_Sunset.theme.css
+++ b/Theme_Group_4/Clear_Sunset.theme.css
@@ -1137,25 +1137,17 @@
 
 /* Green Button Section */
 .lookInverted-2D7oAl.colorGreen-29iAKY:hover,
-.lookFilled-1Gx00P.colorGreen-29iAKY:hover,
-.create-guild-container.deprecated .action:hover.join .btn,
-.create-guild-container.deprecated .join-server .btn-primary:hover {
+.lookFilled-1Gx00P.colorGreen-29iAKY:hover {
     border: 2px solid rgba(255,255,255,0.12);
 }
 
 .lookInverted-2D7oAl.colorGreen-29iAKY,
-.lookFilled-1Gx00P.colorGreen-29iAKY,
-.create-guild-container.deprecated .action.join .btn,
-.create-guild-container.deprecated .join-server .btn-primary {
+.lookFilled-1Gx00P.colorGreen-29iAKY {
     background-color: rgb(0, 153, 51) !important;
     color: white;
 }
 
-.create-guild-container.deprecated .action.join .action-header,
-.create-guild-container.deprecated .join-server h5,
-.create-guild-container.deprecated .join-server .sample-link {
-    color: rgb(0, 153, 51);
-}
+
 
 .form-deprecated .control-group input[type=email]:focus, .form-deprecated .control-group input[type=number]:focus, .form-deprecated .control-group input[type=password]:focus, .form-deprecated .control-group input[type=text]:focus, .form-deprecated .control-group textarea:focus, .form.deprecated .control-group input[type=email]:focus, .form.deprecated .control-group input[type=number]:focus, .form.deprecated .control-group input[type=password]:focus, .form.deprecated .control-group input[type=text]:focus, .form.deprecated .control-group textarea:focus {
     border-bottom: 2px solid rgb(0, 153, 51);
@@ -1597,8 +1589,7 @@
 .lookFilled-1Gx00P.colorBrand-3pXr91:hover,
 .lookOutlined-3sRXeN.colorBrand-3pXr91:hover,
 .form-deprecated .btn-primary:hover, 
-.form.deprecated .btn-primary:hover,
-.create-guild-container.deprecated .action:hover.create .btn,
+.form.deprecated .btn-primary:hove,
 .lookInverted-2D7oAl.colorBrand-3pXr91:hover {
     background-color: #0059b3;
 }
@@ -1613,26 +1604,6 @@
     color: #fff;
 }
 
-.create-guild-container.deprecated h5,
-.regionSelect-3lf4eE button,
-.create-guild-container.deprecated .action.create .action-header {
-     color: #0066cc;
-}
-
-.avatar-uploader-inner {
-    background-color: #0066cc;
-    border: none;
-}
-
-.regionSelect-3lf4eE:hover .regionSelectInner-24f4Ce, 
-.regionSelect-3lf4eE:hover button {
-    border-color: #0066cc;
-}
-
-.regionSelect-3lf4eE:hover button {
-   background-color: #0066cc;
-}
-/* */
 
 .theme-dark .select-2TCrqx .Select-control .Select-placeholder {
     color: white;
@@ -1826,65 +1797,7 @@
     font-size: 35px;
 }
 
-/* Create and Join */
 
-.create-guild-container.deprecated .create-or-join .form-inner,
-.create-guild-container.deprecated .form.deprecated .form-inner {
-    background-color: rgba(138, 40, 73,0.6);
-    background-image: none;
-}
-
-.create-guild-container.deprecated {
-    background-color: transparent;
-    border-radius: 0;
-}
-
-.create-guild-container.deprecated .form-actions {
-    background-color: rgba(138, 40, 73,0.6);
-    border-top: none;
-}
-.create-guild-container.deprecated .action {
-    background: rgba(0, 0, 0, 0.55);
-    border: none;
-    border-radius: 0;
-    box-shadow: none;
-}
-
-.create-guild-container.deprecated .join-server .link-container input {
-    background-color: rgba(0,0,0,0.6);
-}
-
-.create-guild-container.deprecated .form-actions .btn-default {
-    color: white;
-    background-color: rgba(0,0,0,0.6);
-    border: none;
-    padding-right: 12px;
-}
-
-.create-guild-container.deprecated .create-or-join header,
-.create-guild-container.deprecated .action .action-body,
-.create-guild-container.deprecated p,
-.create-guild-container.deprecated .join-server .link-container label,
-.form-deprecated .control-group label, 
-.form.deprecated .control-group label,
-.create-guild-container.deprecated .create-guild .guild-form .help-text,
-.regionSelectName-2-2FWh,
-.avatar-uploader .size-info,
-.theme-dark .member-1q7VfX .tag-1YGWN9 {
-    color: white;
-}
-
-.form-deprecated .control-group input[type=email], .form-deprecated .control-group input[type=number], .form-deprecated .control-group input[type=password], .form-deprecated .control-group input[type=text], .form-deprecated .control-group textarea, .form.deprecated .control-group input[type=email], .form.deprecated .control-group input[type=number], .form.deprecated .control-group input[type=password], .form.deprecated .control-group input[type=text], .form.deprecated .control-group textarea {
-    background-color: rgba(0,0,0,0.6);
-    padding-left: 6px;
-}
-
-.regionSelect-3lf4eE .regionSelectInner-24f4Ce,
-.regionSelect-3lf4eE button {
-    border: 1px solid transparent;
-    border-radius: 0;
-}
-/* */
 .theme-dark .button-2b6hmh:hover, .theme-light .button-2b6hmh:hover {
     background-color: rgba(138, 40, 73,.6);
     border: 2px solid #8a2849;
